Implemented Proxy creator for Lazies